--- a/frontend/src/styles/defaultColorPreset.css
+++ b/frontend/src/styles/defaultColorPreset.css
@@ -1,6 +1,6 @@
 * {
   --primary-color: #FFFFFF;
-  --secondary-color: #F7F7F7;
+  --secondary-color: #EFEFEF;
   --primary-invert-color: #000000;
   --secondary-invert-color: #0e0e0e;
   --primary-bg-color: #231F20;
