--- a/frontend/src/styles/defaultColorPreset.css
+++ b/frontend/src/styles/defaultColorPreset.css
@@ -2,7 +2,7 @@
   --primary-color: #FFFFFF;
   --secondary-color: #EFEFEF;
   --primary-invert-color: #000000;
-  --secondary-invert-color: #0e0e0e;
+  --secondary-invert-color: #9a9a9a;
   --primary-bg-color: #231F20;
   --secondary-bg-color: #0A1929;
   --primary-fg-color: #EFEFEF;
