--- a/frontend/src/components/letter/letterView.css
+++ b/frontend/src/components/letter/letterView.css
@@ -44,6 +44,7 @@
 .letterview-content {
   padding: 1rem 0;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .letterview-content > p {
@@ -58,6 +59,24 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  overflow-y: scroll;
+}
+
+.letterview-reply-list::-webkit-scrollbar {
+  width: 5px;
+}
+
+.letterview-reply-list::-webkit-scrollbar-track {
+  background: var(--secondary-color);
+}
+
+.letterview-reply-list::-webkit-scrollbar-thumb {
+  background: var(--secondary-invert-color);
+  border-radius: 5px;
+}
+
+.letterview-reply-list::-webkit-scrollbar-button {
+  background: none;
 }
 
 .letterview-reply-compose {
