--- a/frontend/src/modules/incognito-qa/styles/letterBox.css
+++ b/frontend/src/modules/incognito-qa/styles/letterBox.css
@@ -6,13 +6,19 @@
 
 .letterbox-container {
   display: flex;
+  width: 100%;
 }
 
 .letterbox-list-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
   background-color: var(--secondary-color);
   margin: 1rem 0;
   border-radius: 15px;
+  position: relative;
 }
 
 .letterbox-list {
@@ -38,4 +44,24 @@
 
 .letterbox-list::-webkit-scrollbar-button {
   background: none;
+}
+
+.compose-letter-button-wrapper {
+  width: calc(100% - 2rem + 10px);
+}
+
+.compose-letter-button-container {
+  width: 100%;
+  border: none;
+  background-color: var(--primary-border-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  margin-bottom: 20px;
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  border-radius: 10px;
+  letter-spacing: 1px;
 }
