--- a/frontend/src/components/letter/letterView.css
+++ b/frontend/src/components/letter/letterView.css
@@ -38,10 +38,6 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  margin: 0 1rem;
-}
-
-.letterview-content {
   padding: 1rem 0;
   gap: 1rem;
   overflow: hidden;
@@ -50,10 +46,14 @@
 .letterview-content > p {
   margin: 0;
   text-align: justify;
-  font-size: 1.1rem;
+  font-size: 1rem;
+  max-height: 40%;
+  overflow-y: scroll;
+  padding: 0 1rem;
 }
 
 .letterview-reply-list {
+  height: 50%;
   border-top: 1px solid var(--primary-invert-color);
   padding: 1rem 0;
   display: flex;
@@ -79,12 +79,28 @@
   background: none;
 }
 
+.letterview-content>p::-webkit-scrollbar {
+  width: 5px;
+}
+
+.letterview-content>p::-webkit-scrollbar-track {
+  background: var(--secondary-color);
+}
+
+.letterview-content>p::-webkit-scrollbar-thumb {
+  background: var(--secondary-invert-color);
+  border-radius: 5px;
+}
+
+.letterview-content>p::-webkit-scrollbar-button {
+  background: none;
+}
+
 .letterview-reply-compose {
   display: flex;
   width: 100%;
   height: 3rem;
   padding-top: 2rem;
-  padding-bottom: 0.2rem;
   gap: 1rem;
   justify-content: space-between;
   border-top: 1px solid var(--primary-invert-color);
@@ -94,8 +110,8 @@
   flex-grow: 1;
   border: none;
   border-bottom: 2px solid var(--primary-invert-color);
-  font-size: 1.3rem;
-  padding: 10px;
+  font-size: 1rem;
+  padding: 5px;
   font-weight: 400;
 }
 
@@ -111,7 +127,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  font-size: 1.3rem;
+  font-size: 1rem;
   letter-spacing: 1px;
   border-radius: 10px;
   border: 2px solid var(--primary-invert-color);
@@ -124,5 +140,5 @@
 }
 
 .letterview-reply-compose img {
-  width: 1.6rem;
+  width: 1.2rem;
 }
