--- a/frontend/src/modules/dashboard/styles/placeholderDashboard.css
+++ b/frontend/src/modules/dashboard/styles/placeholderDashboard.css
@@ -9,7 +9,7 @@
   display: flex;
   width: 100%;
   /* height: 100%; */
-  margin: 15px;
+  margin: 15px 15px 15px 0px;
   border-radius: 15px;
   flex-direction: column;
   align-items: center;
