--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,3 +4,12 @@
   display: flex;
   flex-direction: row;
 }
+
+.sizedView {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  margin: 1rem;
+  border-radius: 15px;
+  overflow: hidden;
+}
