--- a/frontend/src/components/letter/letterMini.css
+++ b/frontend/src/components/letter/letterMini.css
@@ -28,28 +28,31 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  color: var(--secondary-invert-color)
-}
-
-.lettermini-status {
-  border-radius: 5px;
-  padding: 2px 8px;
+  color: var(--secondary-invert-color);
 }
 
 .lettermini-pending .lettermini-status {
-  border: 2px solid var(--primary-invert-color);
-  color: var(--primary-invert-color);
+  width: 1rem;
+  height: 1rem;
+  background-color: transparent;
+  border-radius: 50%;
+  outline: 1px solid var(--secondary-invert-color);
 }
 
 .lettermini-read .lettermini-status {
-  border: 2px solid var(--primary-border-color);
-  color: var(--primary-border-color);
+  width: 1rem;
+  height: 1rem;
+  background-color: transparent;
+  border-radius: 50%;
+  outline: 1px solid var(--primary-border-color);
 }
 
 .lettermini-replied .lettermini-status {
-  border: 2px solid var(--primary-border-color);
+  width: 1rem;
+  height: 1rem;
   background-color: var(--primary-border-color);
-  color: var(--primary-color);
+  border-radius: 50%;
+  outline: 1px solid var(--primary-border-color);
 }
 
 .lettermini-timestamp {
