--- a/frontend/src/components/letter/letterReplyView.css
+++ b/frontend/src/components/letter/letterReplyView.css
@@ -9,7 +9,7 @@
 .letterreply-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
   max-width: 65%;
   margin: 0 15px;
   padding: 10px 20px 10px 10px;
