--- a/frontend/src/modules/incognito-qa/styles/letterBox.css
+++ b/frontend/src/modules/incognito-qa/styles/letterBox.css
@@ -16,8 +16,6 @@
   justify-content: space-between;
   gap: 10px;
   background-color: var(--secondary-color);
-  margin: 1rem 0;
-  border-radius: 15px;
   position: relative;
 }
 
@@ -25,7 +23,7 @@
   display: inline-flex;
   flex-direction: column;
   overflow-y: scroll;
-  padding: 10px 10px;
+  padding: 10px 0px 10px 10px;
   gap: 10px;
 }
 
@@ -64,4 +62,10 @@
   font-size: 1.2rem;
   border-radius: 10px;
   letter-spacing: 1px;
+}
+
+.letterview-placeholder {
+  background-color: var(--secondary-color);
+  display: flex;
+  flex-grow: 1;
 }
